test: 자동차 전체 이동 단위 테스트 추가